kubernetes/applications/homelab/mccruden-site-production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mccruden-site
  namespace: mccruden-site-production
  labels:
    app.kubernetes.io/name: mccruden-site
    app.kubernetes.io/part-of: mccruden-com
    app.kubernetes.io/environment: production
spec:
  replicas: 2
  revisionHistoryLimit: 3
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mccruden-site
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mccruden-site
        app.kubernetes.io/part-of: mccruden-com
        app.kubernetes.io/environment: production
    spec:
      serviceAccountName: mccruden-site
      automountServiceAccountToken: false
      enableServiceLinks: false
      terminationGracePeriodSeconds: 10
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        runAsGroup: 101
        fsGroup: 101
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: mccruden-site
      containers:
        - name: site
          image: ghcr.io/stephen-mccruden/mccruden.com:production-31262605917-739477f3bf6b39ee2d78c38a578d6412322ccff2@sha256:8e3e11a6f1f9eada579f9a68b860aec0d5275bc6e23b863a092bd3074a20c15d # {"$imagepolicy": "flux-system:mccruden-site-production"}
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          startupProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 2
            timeoutSeconds: 1
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 100m
              memory: 64Mi
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: tmp
          emptyDir:
            medium: Memory
            sizeLimit: 16Mi
